--- a/lending/translations/en.csv
+++ b/lending/translations/en.csv
@@ -13,6 +13,7 @@ Accrual Type,,
 Active,,
 Add To First EMI,,
 Add to first repayment,,
+Additional Information,,
 Additional Interest,,
 Additional Interest Accounts ,,
 Additional Interest Accrued,,
@@ -22,6 +23,10 @@ Additional Interest Receivable,,
 Additional Interest Suspense,,
 Additional Interest Suspense Entry,,
 Additional Interest Waiver,,
+Additional Requirements,,
+Additional details or special instructions,,
+Additional notes about this fee,,
+Additional requirements or special conditions,,
 Address,,
 Address Details,,
 Address HTML,,
@@ -39,21 +44,29 @@ All entries on and after this date will be reposted,,
 Allocated Amount,,
 Allocated Date,,
 Allocated Demands,,
+Allow NPL Customers,,
+Allow customers with Non-Performing Loan history,,
+Allowed Collateral Types,,
 Amended From,,
 America/New_York,,
 Amount,,
 Amount Paid,,
 Amount on which interest is calculated,,
 Amounts,,
+Any Collateral,,
+Applicability Range,,
 Applicant,,
 Applicant ,,
 Applicant Details,,
 Applicant Name,,
 Applicant Type,,
 Applicant-Wise Loan Security Exposure,,
+Applies to Loan Amount (Max),,
+Applies to Loan Amount (Min),,
 Approved,,
 Apps,,
 Auto Write Off Amount ,,
+Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
@@ -66,6 +79,7 @@ Balance Amount,,
 Balance Loan Amount,,
 Balance Overdue Principal,,
 Bank Account,,
+Bank Statement,,
 Base Amount,,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
@@ -75,6 +89,7 @@ Broken Period Interest,,
 Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
+Business Registration,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
@@ -95,6 +110,13 @@ Charges Capitalization,,
 Charges Overdue,,
 Charges Treatment,,
 Charges Waiver,,
+Check credit bureau (NCB) before approving loan,,
+Check if fee amount is a percentage of loan amount,,
+Check if field verification is required,,
+Check if guarantor is required for this product,,
+Check if income verification is required,,
+Check if ownership transfer is required,,
+Check if this fee is waived (free),,
 Classification Code,,
 Classification Name,,
 Clear demand allocation before repost,,
@@ -105,6 +127,10 @@ Closure Date,,
 Co Lender Schedule,,
 Co Lending,,
 Co-Lender Schedule,,
+Collateral Photo,,
+Collateral Requirements,,
+Collateral Type,,
+Collateral and guarantor requirements by loan amount tier,,
 Collection Offset Sequence,,
 Collection Offset Sequence for Settlement Collection,,
 Collection Offset Sequence for Standard Asset,,
@@ -112,6 +138,7 @@ Collection Offset Sequence for Sub Standard Asset,,
 Collection Offset Sequence for Written Off Asset,,
 Collection Percentage,,
 Collection at partner's percentage,,
+Color theme for highlighted point,,
 Company,,
 Company Collection Percentage,,
 Completed,,
@@ -119,12 +146,14 @@ Completed Tenure,,
 Components,,
 Connections,,
 Contract Export Report,,
+Contract Fee,,
 Corporate Guarantee Only,,
 Cost Center,,
 Credit Account,,
 Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
+Criteria for loan application screening and approval,,
 Current Disbursed Amount,,
 Current Principal Amount,,
 Current Restructure Count,,
@@ -132,6 +161,7 @@ Customer,,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
 Daily,,
+Danger,,
 Date,,
 Day of every month on which the repayment date is considered,,
 Days Past Due,,
@@ -140,6 +170,7 @@ Days Past Due Threshold for NPA,,
 Debit Adjustment,,
 Debit Adjustment Amount,,
 Decentralized,,
+Define minimum and maximum loan periods in months,,
 Delete GL Entries,,
 Delinked,,
 Delinquent Available Limit,,
@@ -157,6 +188,9 @@ Demand Type,,
 Deposit Amount,,
 Deposit Date,,
 Description,,
+Description (English),,
+Description (Thai),,
+Detailed explanation of this selling point,,
 Details,,
 Disabled,,
 Disbursed,,
@@ -166,12 +200,20 @@ Disbursement Account,,
 Disbursement Date,,
 Disbursement Details,,
 Disbursement References,,
+Display Settings,,
+Display order (lower number shows first),,
+Document Details,,
+Document Name (English),,
+Document Name (Thai),,
+Document Requirements,,
+Document Type,,
 Documentation,,
 Draft,,
 Due Date,,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
+Early Repayment Fee,,
 Effective Date,,
 Employee,,
 Employee Self Service,,
@@ -179,6 +221,7 @@ Enable Partner Accounting,,
 End of the current month,,
 Entries To Cancel,,
 Entries To Repost,,
+Entry Fee,,
 Event,,
 Excess Amount,,
 Excess Amount Acceptance Limit,,
@@ -193,6 +236,16 @@ FLDG Trigger DPD,,
 FLDG Trigger Date,,
 FLDG Triggered,,
 Failed Repayment,,
+Feature this selling point prominently,,
+Fee Amount,,
+Fee Details,,
+Fee Name (English),,
+Fee Name (Thai),,
+Fee Type,,
+Fees,,
+"Fees, collateral requirements, documents, and selling points",,
+Field Verification Required,,
+Financial Statement,,
 Fixed Amount,,
 Fixed Deposit Only,,
 Force Update DPD in Loan,,
@@ -205,13 +258,26 @@ From Branch,,
 From Date,,
 Full Settlement,,
 Grace Period in Days,,
+Guarantor Required,,
 Haircut,,
 Haircut %,,
 Haircut percentage is the percentage difference between market value of the Loan Security and the value ascribed to that Loan Security when used as collateral for that loan.,,
+Highlight Color,,
+Highlight Settings,,
+Highlight This Point,,
+House Registration,,
+"How recent the document must be (e.g., 3 for salary slips)",,
+ID Card,,
+Icon,,
+"Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
 Income Account,,
+Income Multiplier,,
+Income Verification Required,,
+Info,,
 Initiated,,
+Insurance Fee,,
 Interest,,
 Interest Accounts,,
 Interest Accrued Account,,
@@ -232,15 +298,27 @@ Internal Foreclosure,,
 Invoice Date,,
 Is Backdated,,
 Is Excess Amount Refund,,
+Is Mandatory,,
 Is NPA,,
+Is Percentage,,
 Is Secured Loan,,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
+Is Sub-Product,,
 Is Term Loan,,
+Is Waived,,
 Is Write Off Waiver,,
 Is Written Off,,
 Keyboard Shortcuts,,
+LTV Ratio (Loan-to-Value),,
+Land,,
+Land + Property,,
+Land Title Deed,,
 Last Accrual Date,,
+Late Payment Fee,,
+Leave blank for unlimited,,
+Leave blank if applies to all amounts,,
+Leave blank if no upper limit,,
 Lending,,
 Limit Amount,,
 Limit Applicable End,,
@@ -249,6 +327,7 @@ Limit Percent,,
 Limit Renewal,,
 Limits,,
 Line of Credit,,
+Link to parent product if this is a sub-product. Leave blank for main products.,,
 Loan,,
 Loan ,,
 Loan  Details,,
@@ -261,6 +340,7 @@ Loan Adjustment Detail,,
 Loan Amount,,
 Loan Amount Details,,
 Loan Amount Percentage,,
+Loan Amount Range,,
 Loan Application,,
 Loan Balance Adjustment,,
 Loan Booking,,
@@ -304,8 +384,13 @@ Loan Partner Share Details,,
 Loan Partner Share Percentage,,
 Loan Partner Shareable,,
 Loan Partners,,
+Loan Period Limits,,
 Loan Product,,
+Loan Product Collateral Requirement,,
+Loan Product Document Requirement,,
+Loan Product Fee,,
 Loan Product Loan Partner,,
+Loan Product Selling Point,,
 Loan Refund,,
 Loan Repayment,,
 Loan Repayment Charges,,
@@ -322,6 +407,7 @@ Loan Restructure,,
 Loan Restructure Count,,
 Loan Restructure Details,,
 Loan Restructure Limit Log,,
+Loan Screening Criteria,,
 Loan Security,,
 Loan Security Assignment,,
 Loan Security Code,,
@@ -344,19 +430,47 @@ Loan is a Non Performing Asset,,
 Loans,,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+M Capital Limits,,
+M Capital Product Code,,
+M Capital Product Settings,,
+M Capital Requirements,,
+"M Capital product code (M, N, O, MC, L, H, RE, One Time) or sub-product code (e.g., M-01, N-02). Main products: M=Minimal, N=Normal, O=Over, MC=Motor, L=Land, H=Home, RE=Refinance, One Time=Agricultural",,
+M Capital specific product categorization and requirements,,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
 Manually marked as NPA,,
+Marketing point in English language,,
+Marketing point in Thai language,,
+Marketing selling points for this product,,
 Maturity Date,,
 Max DPD Range,,
+Maximum Debt Service Ratio (%),,
+Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
 Maximum Loan Amount,,
+Maximum Loan Period (Months),,
 Maximum Loan Value,,
+Maximum Vehicle Age (years),,
+"Maximum debt service ratio allowed (e.g., 40% means monthly debt payments cannot exceed 40% of income)",,
+"Maximum loan amount as multiple of monthly income (e.g., 10 means max loan = 10x monthly income)",,
+Maximum loan period in months,,
+Maximum loan-to-value ratio (leave blank for no limit),,
+Maximum loan-to-value ratio allowed,,
+Maximum vehicle age allowed (leave blank for no limit),,
 Member,,
 Min DPD Range,,
+Minimum Guarantors,,
+Minimum LTV Ratio (%),,
+Minimum Loan Amount,,
+Minimum Loan Period (Months),,
 Minimum Partner Loan Amount Percentage,,
 Minimum days between Disbursement date and first Repayment date,,
+Minimum loan amount for this product,,
+Minimum loan period in months,,
+Minimum loan-to-value ratio,,
+Minimum loan-to-value ratio required,,
+Minimum number of guarantors required,,
 Misc,,
 Mode Of Payment,,
 Monthly,,
@@ -385,7 +499,10 @@ Normal Interest Journal Entry,,
 Normal Limit,,
 Normal Repayment,,
 Normal Restructure,,
+Notes,,
 Number Of Days,,
+Number of Guarantors Required,,
+"Number of copies or instances required (e.g., 3 for salary slips)",,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
@@ -395,6 +512,7 @@ One Time,,
 Open,,
 Organization Type,,
 Original Security Value,,
+Other,,
 Other Charges Waiver,,
 Other Details,,
 Outdated,,
@@ -403,8 +521,10 @@ Outstanding Balance Report,,
 Outstanding Principal,,
 Outstanding Principal & Interest Accrued,,
 Own Ratio,,
+Ownership Transfer Required,,
 POS reduction plus interest at partner ROI,,
 Paid Amount,,
+Parent Product,,
 Partial Payment Mechanism,,
 Partial Settlement,,
 Partially Disbursed,,
@@ -482,12 +602,25 @@ Process Loan Interest Accrual,,
 Process Loan Restructure Limit,,
 Process Loan Security Shortfall,,
 Process Payroll Accounting Entry based on Employee,,
+Processing Fee,,
 Product Code,,
+Product Configuration,,
+Product Description,,
+Product Details,,
 Product Name,,
+Product Name (English),,
+Product Name (Thai),,
+Product fees and charges,,
+Product name in English language,,
+Product name in Thai language,,
+Product-specific special requirements and conditions,,
+Property,,
+Property Deed,,
 Proposed Pledge,,
 Proposed Pledges,,
 Provision Rate,,
 Quantity,,
+Quantity Required,,
 Quarterly,,
 Rate Of Interest,,
 Rate of Interest,,
@@ -540,12 +673,16 @@ Report an Issue,,
 Repossessed,,
 Repost Date,,
 Requested,,
+Require Credit Bureau Check,,
+Required documents for loan application,,
+Required for loan application,,
 Rescheduled,,
 Restructure Charges,,
 Restructure Date,,
 Restructure Type,,
 Restructure of Loans applicable,,
 Restructured,,
+Salary Slip,,
 Sales Invoice,,
 Same as regular interest accounts,,
 Sanctioned,,
@@ -558,6 +695,9 @@ Security Deposit Adjustment,,
 Security Type,,
 Security Value ,,
 Select whether the repayment date should be the end of the current month or start of the upcoming month,,
+Selling Point (English),,
+Selling Point (TH),,
+Selling Points,,
 Semi-Secured,,
 Servicer Fee,,
 Session Defaults,,
@@ -569,16 +709,22 @@ Sharing Parameter,,
 Shortfall Amount,,
 Shortfall Percentage,,
 Shortfall Time,,
+Sort Order,,
+Special Conditions,,
+Specify loan amount range where this document is required,,
+Stamp Duty,,
 Start Date,,
 Start of the next month,,
 Status,,
 Submitted,,
 Subsidy Adjustment Account,,
 Subsidy Adjustments,,
+Success,,
 Suspense Account,,
 Suspense Collection Account,,
 Suspense Interest Income,,
 System Manager,,
+Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,,
@@ -626,20 +772,28 @@ Unpledged,,
 Unsecured,,
 Update Time,,
 User Forum,,
+Utility Bill,,
 Utilized Limit,,
 Utilized Limit Amount,,
 Utilized Security Value,,
 Valid From,,
 Valid Upto,,
 Validate Normal Repayment,,
+Validity Period (Months),,
 Value Change,,
 Value Date,,
 Value Type,,
+Vehicle,,
+Vehicle + Land,,
+Vehicle + Property,,
+Vehicle Registration,,
+Vehicle/land types allowed for this product,,
 View Website,,
 Waive Off Restructure Charges,,
 Waived Amount,,
 Waiver Account,,
 Waiving of Charges applicable,,
+Warning,,
 Watch Period End Date,,
 Weekly,,
 Withhold Security Deposit,,
