--- a/lending/translations/vi.csv
+++ b/lending/translations/vi.csv
@@ -13,6 +13,7 @@ Accrual Type,,
 Active,có hiệu lực,
 Add To First EMI,,
 Add to first repayment,,
+Additional Information,thông tin thêm,
 Additional Interest,,
 Additional Interest Accounts ,,
 Additional Interest Accrued,,
@@ -22,6 +23,10 @@ Additional Interest Receivable,,
 Additional Interest Suspense,,
 Additional Interest Suspense Entry,,
 Additional Interest Waiver,,
+Additional Requirements,,
+Additional details or special instructions,,
+Additional notes about this fee,,
+Additional requirements or special conditions,,
 Address,Địa chỉ,
 Address Details,,
 Address HTML,Địa chỉ HTML,
@@ -39,21 +44,29 @@ All entries on and after this date will be reposted,,
 Allocated Amount,Số lượng phân bổ,
 Allocated Date,,
 Allocated Demands,,
+Allow NPL Customers,,
+Allow customers with Non-Performing Loan history,,
+Allowed Collateral Types,,
 Amended From,Sửa đổi Từ,
 America/New_York,Mỹ / New_York,
 Amount,Giá trị,
 Amount Paid,Số tiền trả,
 Amount on which interest is calculated,,
 Amounts,Lượng,
+Any Collateral,,
+Applicability Range,,
 Applicant,Người nộp đơn,
 Applicant ,,
 Applicant Details,,
 Applicant Name,Tên đơn,
 Applicant Type,Loại người nộp đơn,
 Applicant-Wise Loan Security Exposure,,
+Applies to Loan Amount (Max),,
+Applies to Loan Amount (Min),,
 Approved,Đã được phê duyệt,
 Apps,,
 Auto Write Off Amount ,,
+Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
@@ -66,6 +79,7 @@ Balance Amount,,
 Balance Loan Amount,Số dư vay nợ,
 Balance Overdue Principal,,
 Bank Account,Tài khoản ngân hàng,
+Bank Statement,,
 Base Amount,,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
@@ -75,6 +89,7 @@ Broken Period Interest,,
 Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
+Business Registration,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
@@ -95,6 +110,13 @@ Charges Capitalization,,
 Charges Overdue,,
 Charges Treatment,,
 Charges Waiver,,
+Check credit bureau (NCB) before approving loan,,
+Check if fee amount is a percentage of loan amount,,
+Check if field verification is required,,
+Check if guarantor is required for this product,,
+Check if income verification is required,,
+Check if ownership transfer is required,,
+Check if this fee is waived (free),,
 Classification Code,,
 Classification Name,,
 Clear demand allocation before repost,,
@@ -105,6 +127,10 @@ Closure Date,,
 Co Lender Schedule,,
 Co Lending,,
 Co-Lender Schedule,,
+Collateral Photo,,
+Collateral Requirements,,
+Collateral Type,,
+Collateral and guarantor requirements by loan amount tier,,
 Collection Offset Sequence,,
 Collection Offset Sequence for Settlement Collection,,
 Collection Offset Sequence for Standard Asset,,
@@ -112,6 +138,7 @@ Collection Offset Sequence for Sub Standard Asset,,
 Collection Offset Sequence for Written Off Asset,,
 Collection Percentage,,
 Collection at partner's percentage,,
+Color theme for highlighted point,,
 Company,Công ty,
 Company Collection Percentage,,
 Completed,Hoàn thành,
@@ -119,12 +146,14 @@ Completed Tenure,,
 Components,Các thành phần,
 Connections,,
 Contract Export Report,,
+Contract Fee,,
 Corporate Guarantee Only,,
 Cost Center,Bộ phận chi phí,
 Credit Account,Tài khoản nợ,
 Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
+Criteria for loan application screening and approval,,
 Current Disbursed Amount,,
 Current Principal Amount,,
 Current Restructure Count,,
@@ -132,6 +161,7 @@ Customer,Khách Hàng,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
 Daily,Hàng ngày,
+Danger,Nguy hiểm,
 Date,Ngày,
 Day of every month on which the repayment date is considered,,
 Days Past Due,,
@@ -140,6 +170,7 @@ Days Past Due Threshold for NPA,,
 Debit Adjustment,,
 Debit Adjustment Amount,,
 Decentralized,,
+Define minimum and maximum loan periods in months,,
 Delete GL Entries,,
 Delinked,,
 Delinquent Available Limit,,
@@ -157,6 +188,9 @@ Demand Type,,
 Deposit Amount,,
 Deposit Date,,
 Description,Mô tả,
+Description (English),,
+Description (Thai),,
+Detailed explanation of this selling point,,
 Details,Chi tiết,
 Disabled,Đã vô hiệu hóa,
 Disbursed,Đã giải ngân,
@@ -166,12 +200,20 @@ Disbursement Account,,
 Disbursement Date,ngày giải ngân,
 Disbursement Details,Chi tiết giải ngân,
 Disbursement References,,
+Display Settings,Thiết lập hiển thị,
+Display order (lower number shows first),,
+Document Details,,
+Document Name (English),,
+Document Name (Thai),,
+Document Requirements,,
+Document Type,loại tài liệu,
 Documentation,,
 Draft,Bản nháp,
 Due Date,Ngày đáo hạn,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
+Early Repayment Fee,,
 Effective Date,,
 Employee,Nhân viên,
 Employee Self Service,,
@@ -179,6 +221,7 @@ Enable Partner Accounting,,
 End of the current month,,
 Entries To Cancel,,
 Entries To Repost,,
+Entry Fee,,
 Event,Sự Kiện,
 Excess Amount,,
 Excess Amount Acceptance Limit,,
@@ -193,6 +236,16 @@ FLDG Trigger DPD,,
 FLDG Trigger Date,,
 FLDG Triggered,,
 Failed Repayment,,
+Feature this selling point prominently,,
+Fee Amount,,
+Fee Details,,
+Fee Name (English),,
+Fee Name (Thai),,
+Fee Type,,
+Fees,phí,
+"Fees, collateral requirements, documents, and selling points",,
+Field Verification Required,,
+Financial Statement,,
 Fixed Amount,,
 Fixed Deposit Only,,
 Force Update DPD in Loan,,
@@ -205,13 +258,26 @@ From Branch,,
 From Date,Từ ngày,
 Full Settlement,,
 Grace Period in Days,Thời gian ân sủng trong ngày,
+Guarantor Required,,
 Haircut,Cắt tóc,
 Haircut %,Cắt tóc%,
 Haircut percentage is the percentage difference between market value of the Loan Security and the value ascribed to that Loan Security when used as collateral for that loan.,Tỷ lệ phần trăm cắt tóc là phần trăm chênh lệch giữa giá trị thị trường của Bảo đảm Khoản vay và giá trị được quy định cho Bảo đảm Khoản vay đó khi được sử dụng làm tài sản thế chấp cho khoản vay đó.,
+Highlight Color,,
+Highlight Settings,,
+Highlight This Point,,
+House Registration,,
+"How recent the document must be (e.g., 3 for salary slips)",,
+ID Card,,
+Icon,Biểu tượng,
+"Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
 Income Account,Tài khoản thu nhập,
+Income Multiplier,,
+Income Verification Required,,
+Info,Thông tin,
 Initiated,Được khởi xướng,
+Insurance Fee,,
 Interest,Quan tâm,
 Interest Accounts,,
 Interest Accrued Account,,
@@ -232,15 +298,27 @@ Internal Foreclosure,,
 Invoice Date,Hóa đơn ngày,
 Is Backdated,,
 Is Excess Amount Refund,,
+Is Mandatory,Bắt buộc,
 Is NPA,,
+Is Percentage,,
 Is Secured Loan,Khoản vay có bảo đảm,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
+Is Sub-Product,,
 Is Term Loan,Vay có kỳ hạn,
+Is Waived,,
 Is Write Off Waiver,,
 Is Written Off,,
 Keyboard Shortcuts,Các phím tắt bàn phím,
+LTV Ratio (Loan-to-Value),,
+Land,,
+Land + Property,,
+Land Title Deed,,
 Last Accrual Date,,
+Late Payment Fee,,
+Leave blank for unlimited,,
+Leave blank if applies to all amounts,,
+Leave blank if no upper limit,,
 Lending,,
 Limit Amount,,
 Limit Applicable End,,
@@ -249,6 +327,7 @@ Limit Percent,,
 Limit Renewal,,
 Limits,,
 Line of Credit,,
+Link to parent product if this is a sub-product. Leave blank for main products.,,
 Loan,Tiền vay,
 Loan ,Tiền vay,
 Loan  Details,Chi tiết khoản vay,
@@ -261,6 +340,7 @@ Loan Adjustment Detail,,
 Loan Amount,Số tiền vay,
 Loan Amount Details,,
 Loan Amount Percentage,,
+Loan Amount Range,,
 Loan Application,Đơn xin vay tiền,
 Loan Balance Adjustment,,
 Loan Booking,,
@@ -304,8 +384,13 @@ Loan Partner Share Details,,
 Loan Partner Share Percentage,,
 Loan Partner Shareable,,
 Loan Partners,,
+Loan Period Limits,,
 Loan Product,,
+Loan Product Collateral Requirement,,
+Loan Product Document Requirement,,
+Loan Product Fee,,
 Loan Product Loan Partner,,
+Loan Product Selling Point,,
 Loan Refund,,
 Loan Repayment,Trả nợ,
 Loan Repayment Charges,,
@@ -322,6 +407,7 @@ Loan Restructure,,
 Loan Restructure Count,,
 Loan Restructure Details,,
 Loan Restructure Limit Log,,
+Loan Screening Criteria,,
 Loan Security,Bảo đảm tiền vay,
 Loan Security Assignment,,
 Loan Security Code,Mã bảo đảm tiền vay,
@@ -344,19 +430,47 @@ Loan is a Non Performing Asset,,
 Loans,Cho vay,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+M Capital Limits,,
+M Capital Product Code,,
+M Capital Product Settings,,
+M Capital Requirements,,
+"M Capital product code (M, N, O, MC, L, H, RE, One Time) or sub-product code (e.g., M-01, N-02). Main products: M=Minimal, N=Normal, O=Over, MC=Motor, L=Land, H=Home, RE=Refinance, One Time=Agricultural",,
+M Capital specific product categorization and requirements,,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
 Manually marked as NPA,,
+Marketing point in English language,,
+Marketing point in Thai language,,
+Marketing selling points for this product,,
 Maturity Date,,
 Max DPD Range,,
+Maximum Debt Service Ratio (%),,
+Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
 Maximum Loan Amount,Số tiền cho vay tối đa,
+Maximum Loan Period (Months),,
 Maximum Loan Value,Giá trị khoản vay tối đa,
+Maximum Vehicle Age (years),,
+"Maximum debt service ratio allowed (e.g., 40% means monthly debt payments cannot exceed 40% of income)",,
+"Maximum loan amount as multiple of monthly income (e.g., 10 means max loan = 10x monthly income)",,
+Maximum loan period in months,,
+Maximum loan-to-value ratio (leave blank for no limit),,
+Maximum loan-to-value ratio allowed,,
+Maximum vehicle age allowed (leave blank for no limit),,
 Member,Hội viên,
 Min DPD Range,,
+Minimum Guarantors,,
+Minimum LTV Ratio (%),,
+Minimum Loan Amount,,
+Minimum Loan Period (Months),,
 Minimum Partner Loan Amount Percentage,,
 Minimum days between Disbursement date and first Repayment date,,
+Minimum loan amount for this product,,
+Minimum loan period in months,,
+Minimum loan-to-value ratio,,
+Minimum loan-to-value ratio required,,
+Minimum number of guarantors required,,
 Misc,,
 Mode Of Payment,Hình thức thanh toán,
 Monthly,Hàng tháng,
@@ -385,7 +499,10 @@ Normal Interest Journal Entry,,
 Normal Limit,,
 Normal Repayment,,
 Normal Restructure,,
+Notes,Ghi chú:,
 Number Of Days,,
+Number of Guarantors Required,,
+"Number of copies or instances required (e.g., 3 for salary slips)",,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
@@ -395,6 +512,7 @@ One Time,,
 Open,Mở,
 Organization Type,,
 Original Security Value,,
+Other,Khác,
 Other Charges Waiver,,
 Other Details,Những chi tiết khác,
 Outdated,,
@@ -403,8 +521,10 @@ Outstanding Balance Report,,
 Outstanding Principal,,
 Outstanding Principal & Interest Accrued,,
 Own Ratio,,
+Ownership Transfer Required,,
 POS reduction plus interest at partner ROI,,
 Paid Amount,Số tiền thanh toán,
+Parent Product,,
 Partial Payment Mechanism,,
 Partial Settlement,,
 Partially Disbursed,phần giải ngân,
@@ -482,12 +602,25 @@ Process Loan Interest Accrual,Quá trình cho vay lãi tích lũy,
 Process Loan Restructure Limit,,
 Process Loan Security Shortfall,Thiếu hụt bảo đảm tiền vay,
 Process Payroll Accounting Entry based on Employee,,
+Processing Fee,,
 Product Code,,
+Product Configuration,,
+Product Description,,
+Product Details,,
 Product Name,,
+Product Name (English),,
+Product Name (Thai),,
+Product fees and charges,,
+Product name in English language,,
+Product name in Thai language,,
+Product-specific special requirements and conditions,,
+Property,Tài sản,
+Property Deed,,
 Proposed Pledge,Cam kết đề xuất,
 Proposed Pledges,Dự kiến cam kết,
 Provision Rate,,
 Quantity,Số lượng,
+Quantity Required,,
 Quarterly,Quý,
 Rate Of Interest,,
 Rate of Interest,lãi suất thị trường,
@@ -540,12 +673,16 @@ Report an Issue,,
 Repossessed,,
 Repost Date,,
 Requested,Yêu cầu,
+Require Credit Bureau Check,,
+Required documents for loan application,,
+Required for loan application,,
 Rescheduled,,
 Restructure Charges,,
 Restructure Date,,
 Restructure Type,,
 Restructure of Loans applicable,,
 Restructured,,
+Salary Slip,phiếu lương,
 Sales Invoice,Hóa đơn bán hàng,
 Same as regular interest accounts,,
 Sanctioned,Xử phạt,
@@ -558,6 +695,9 @@ Security Deposit Adjustment,,
 Security Type,,
 Security Value ,Giá trị bảo mật,
 Select whether the repayment date should be the end of the current month or start of the upcoming month,,
+Selling Point (English),,
+Selling Point (TH),,
+Selling Points,,
 Semi-Secured,,
 Servicer Fee,,
 Session Defaults,Mặc định phiên,
@@ -569,16 +709,22 @@ Sharing Parameter,,
 Shortfall Amount,Số tiền thiếu,
 Shortfall Percentage,,
 Shortfall Time,Thời gian thiếu,
+Sort Order,Thứ tự sắp xếp,
+Special Conditions,,
+Specify loan amount range where this document is required,,
+Stamp Duty,,
 Start Date,Ngày bắt đầu,
 Start of the next month,,
 Status,Trạng thái,
 Submitted,Đã lần gửi,
 Subsidy Adjustment Account,,
 Subsidy Adjustments,,
+Success,Sự thành công,
 Suspense Account,,
 Suspense Collection Account,,
 Suspense Interest Income,,
 System Manager,Hệ thống quản lý,
+Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,Chi tiết điều khoản,
@@ -626,20 +772,28 @@ Unpledged,Không ghép,
 Unsecured,,
 Update Time,Cập nhật thời gian,
 User Forum,,
+Utility Bill,,
 Utilized Limit,,
 Utilized Limit Amount,,
 Utilized Security Value,,
 Valid From,Có hiệu lực từ,
 Valid Upto,Hợp lệ Tối đa,
 Validate Normal Repayment,,
+Validity Period (Months),,
 Value Change,Thay đổi giá trị,
 Value Date,,
 Value Type,,
+Vehicle,phương tiện,
+Vehicle + Land,,
+Vehicle + Property,,
+Vehicle Registration,,
+Vehicle/land types allowed for this product,,
 View Website,Xem trang web,
 Waive Off Restructure Charges,,
 Waived Amount,,
 Waiver Account,,
 Waiving of Charges applicable,,
+Warning,Cảnh báo,
 Watch Period End Date,,
 Weekly,Hàng tuần,
 Withhold Security Deposit,,
