--- a/lending/translations/km.csv
+++ b/lending/translations/km.csv
@@ -157,6 +157,12 @@ Criteria for loan application screening and approval,,
 Current Disbursed Amount,,
 Current Principal Amount,,
 Current Restructure Count,,
+Custom Limits,,
+Custom Product Code,,
+Custom Product Settings,,
+Custom Requirements,,
+Custom product categorization and requirements,,
+"Custom product code (M, N, O, MC, L, H, RE, One Time) or sub-product code (e.g., M-01, N-02). Main products: M=Minimal, N=Normal, O=Over, MC=Motor, L=Land, H=Home, RE=Refinance, One Time=Agricultural",,
 Customer,អតិថិជន,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
@@ -188,7 +194,9 @@ Demand Type,,
 Deposit Amount,,
 Deposit Date,,
 Description,ការពិពណ៌នាសង្ខេប,
+Description (EN),,
 Description (English),,
+Description (TH),,
 Description (Thai),,
 Detailed explanation of this selling point,,
 Details,ពត៌មានលំអិត,
@@ -430,12 +438,6 @@ Loan is a Non Performing Asset,,
 Loans,ប្រាក់កម្ចី។,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
-Custom Limits,,
-Custom Product Code,,
-Custom Product Settings,,
-Custom Requirements,,
-"Product categorization code (e.g., M, N, O, MC) or hierarchical sub-product code (e.g., M-01, N-02)",,
-Custom product categorization and requirements,,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
@@ -608,8 +610,8 @@ Product Configuration,,
 Product Description,,
 Product Details,,
 Product Name,,
-Product Name (English),,
-Product Name (Thai),,
+Product Name (EN),,
+Product Name (TH),,
 Product fees and charges,,
 Product name in English language,,
 Product name in Thai language,,
