Seeding Loan Product

--- a/lending/translations/km.csv
+++ b/lending/translations/km.csv
@@ -1,3 +1,4 @@
+A,,
 ALM Audit Report,,
 About,,
 Account,គណនី,
@@ -7,6 +8,7 @@ Accounting Details,សេចក្ដីលម្អិតគណនី,
 Accounting Dimension,វិមាត្រគណនេយ្យ។,
 Accounting Dimensions,វិមាត្រគណនេយ្យ,
 Accounts,គណនី,
+Accounts User,គណនីអ្នកប្រើប្រាស់,
 Accrual Date,,
 Accrual Details,,
 Accrual Type,,
@@ -65,13 +67,17 @@ Applies to Loan Amount (Max),,
 Applies to Loan Amount (Min),,
 Approved,បានអនុម័ត,
 Apps,,
+Assigned Territories,,
 Auto Write Off Amount ,,
 Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
+Available,ដែលអាចប្រើបាន,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
 Available Security Deposit,,
 Available Security Value,,
+Average Deal Value,,
+B,,
 BPI,,
 BPI Amount Difference,,
 BPI Difference Date,,
@@ -81,6 +87,8 @@ Balance Overdue Principal,,
 Bank Account,គណនីធនាគារ,
 Bank Statement,,
 Base Amount,,
+Basic Information,,
+Beginner,ចាប់ផ្តើម,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
 Branch,សាខា,
@@ -90,10 +98,13 @@ Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
 Business Registration,,
+Busy,រវល់,
+C,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
 Cancelled,បានកាត់បន្ថយ,
+Capacity Management,,
 Capitalize,,
 Carry Forward,អនុវត្តការទៅមុខ,
 Centralized,,
@@ -147,6 +158,7 @@ Components,សមាសភាគ,
 Connections,,
 Contract Export Report,,
 Contract Fee,,
+Conversion Rate,អត្រាការប្រែចិត្តជឿ,
 Corporate Guarantee Only,,
 Cost Center,មជ្ឈមណ្ឌលការចំណាយ,
 Credit Account,គណនីឥណទាន,
@@ -154,10 +166,11 @@ Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
 Criteria for loan application screening and approval,,
+Current Deal Count,,
 Current Disbursed Amount,,
+Current Lead Count,,
 Current Principal Amount,,
 Current Restructure Count,,
-Custom Limits,,
 Custom Product Code,,
 Custom Product Settings,,
 Custom Requirements,,
@@ -166,6 +179,7 @@ Custom product categorization and requirements,,
 Customer,អតិថិជន,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
+D,,
 Daily,ជារៀងរាល់ថ្ងៃ,
 Danger,គ្រោះថ្នាក់,
 Date,កាលបរិច្ឆេទ,
@@ -191,6 +205,7 @@ Demand Date,,
 Demand Generated,,
 Demand Subtype,,
 Demand Type,,
+Department,នាយកដ្ឋាន,
 Deposit Amount,,
 Deposit Date,,
 Description,ការពិពណ៌នាសង្ខេប,
@@ -198,6 +213,7 @@ Description (EN),,
 Description (English),,
 Description (TH),,
 Description (Thai),,
+Designation,ការរចនា,
 Detailed explanation of this selling point,,
 Details,ពត៌មានលំអិត,
 Disabled,ជនពិការ,
@@ -218,6 +234,7 @@ Document Type,ប្រភេទឯកសារ,
 Documentation,,
 Draft,សេចក្តីព្រាង,
 Due Date,កាលបរិច្ឆេទដល់កំណត់,
+E,,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
@@ -235,6 +252,8 @@ Excess Amount,,
 Excess Amount Acceptance Limit,,
 Excess Amount Paid,,
 Excess amount repayment limit during loan closure,,
+Expert,អ្នកជំនាញ,
+Expertise Level,,
 FLDG,,
 FLDG Account,,
 FLDG Corporate Guarantee Percentage,,
@@ -280,6 +299,7 @@ Icon,រូបតំណាង,
 "Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
+Inactive,អសកម្ម,
 Income Account,គណនីប្រាក់ចំណូល,
 Income Multiplier,,
 Income Verification Required,,
@@ -302,6 +322,7 @@ Interest Type,,
 Interest Waiver,,
 Interest Waiver Account,,
 Interest Waiver Amount,,
+Intermediate,កម្រិតមធ្យម,
 Internal Foreclosure,,
 Invoice Date,វិក័យប័ត្រកាលបរិច្ឆេទ,
 Is Backdated,,
@@ -309,6 +330,7 @@ Is Excess Amount Refund,,
 Is Mandatory,គឺចាំបាច់,
 Is NPA,,
 Is Percentage,,
+Is Primary,គឺជាបឋម។,
 Is Secured Loan,គឺជាប្រាក់កម្ចីមានសុវត្ថិភាព,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
@@ -379,6 +401,9 @@ Loan Interest Report,,
 Loan Limit Change Log,,
 Loan Manager,អ្នកគ្រប់គ្រងប្រាក់កម្ចី,
 Loan NPA Log,,
+Loan Officer Product,,
+Loan Officer Profile,,
+Loan Officer Territory,,
 Loan Outstanding Report,,
 Loan Partner,,
 Loan Partner Address,,
@@ -438,6 +463,7 @@ Loan is a Non Performing Asset,,
 Loans,ប្រាក់កម្ចី។,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+"Lower number appears first. Use 1, 2, 3, etc. to control display order.",,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
@@ -446,7 +472,9 @@ Marketing point in English language,,
 Marketing point in Thai language,,
 Marketing selling points for this product,,
 Maturity Date,,
+Max Active Deals,,
 Max DPD Range,,
+Max Leads Per Day,,
 Maximum Debt Service Ratio (%),,
 Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
@@ -505,11 +533,13 @@ Notes,កំណត់ត្រា,
 Number Of Days,,
 Number of Guarantors Required,,
 "Number of copies or instances required (e.g., 3 for salary slips)",,
+Officer Name,,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
 Old Repayment Frequency,,
 Old Tenure,,
+On Leave,ឈប់សម្រាក,
 One Time,,
 Open,បើកទូលាយ,
 Organization Type,,
@@ -575,6 +605,8 @@ Pending,ឡុងេពល,
 Pending Charge Amount,,
 Pending Principal Amount,ចំនួនប្រាក់ដើមដែលនៅសល់,
 Percentage,ចំនួនភាគរយ,
+Performance Metrics,,
+Performance Rating,,
 Pledge,សន្យា,
 Pledge Requested,,
 Pledge Time,ពេលវេលាសន្យា,
@@ -606,16 +638,17 @@ Process Loan Security Shortfall,កង្វះខាតឥណទានសម្
 Process Payroll Accounting Entry based on Employee,,
 Processing Fee,,
 Product Code,,
-Product Configuration,,
 Product Description,,
 Product Details,,
 Product Name,,
 Product Name (EN),,
 Product Name (TH),,
+Product Specializations,,
 Product fees and charges,,
 Product name in English language,,
 Product name in Thai language,,
 Product-specific special requirements and conditions,,
+Products,,
 Property,ទ្រព្យសម្បត្ដិ,
 Property Deed,,
 Proposed Pledge,សន្យាសន្យា,
@@ -711,6 +744,7 @@ Sharing Parameter,,
 Shortfall Amount,ចំនួនខ្វះខាត,
 Shortfall Percentage,,
 Shortfall Time,ពេលវេលាខ្វះខាត,
+Sort Index,,
 Sort Order,តម្រៀបតាមលំដាប់,
 Special Conditions,,
 Specify loan amount range where this document is required,,
@@ -730,6 +764,8 @@ Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,ពត៌មានលំអិតរយៈពេល,
+Territories,,
+Territory,សណ្ធានដី,
 The schedule type that will be used for generating the term loan schedules (will affect the payment date and monthly repayment amount),,
 Timestamp,ត្រាពេលវេលា,
 Title,ចំណងជើង,
@@ -740,11 +776,14 @@ Toggle Theme,,
 Total Amount Paid,ចំនួនទឹកប្រាក់សរុបបង់,
 Total Charges Paid,,
 Total Charges Payable,,
+Total Deals Closed,,
+Total Disbursement,,
 Total Installments Overdue ,,
 Total Installments Paid,,
 Total Installments Raised,,
 Total Interest Paid,,
 Total Interest Payable,ការប្រាក់ត្រូវបង់សរុប,
+Total Leads Assigned,,
 Total Overdue Amount,,
 Total Partner Interest Share,,
 Total Partner Principal Share,,
@@ -773,6 +812,7 @@ Unpledge Time,មិនបង្ហាញពេលវេលា,
 Unpledged,គ្មានការគ្រោងទុក,
 Unsecured,,
 Update Time,ពេលវេលាធ្វើបច្ចុប្បន្នភាព,
+User,អ្នកប្រើ,
 User Forum,,
 Utility Bill,,
 Utilized Limit,,
