--- a/lending/translations/lo.csv
+++ b/lending/translations/lo.csv
@@ -1,3 +1,4 @@
+A,,
 ALM Audit Report,,
 About,,
 Account,ບັນຊີ,
@@ -7,6 +8,7 @@ Accounting Details,ລາຍລະອຽດການບັນຊີ,
 Accounting Dimension,ຂະ ໜາດ ບັນຊີ,
 Accounting Dimensions,ຂະ ໜາດ ບັນຊີ,
 Accounts,ບັນຊີ,
+Accounts User,ບັນຊີຜູ້ໃຊ້,
 Accrual Date,,
 Accrual Details,,
 Accrual Type,,
@@ -65,13 +67,17 @@ Applies to Loan Amount (Max),,
 Applies to Loan Amount (Min),,
 Approved,ການອະນຸມັດ,
 Apps,,
+Assigned Territories,,
 Auto Write Off Amount ,,
 Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
+Available,ສາມາດໃຊ້ໄດ້,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
 Available Security Deposit,,
 Available Security Value,,
+Average Deal Value,,
+B,,
 BPI,,
 BPI Amount Difference,,
 BPI Difference Date,,
@@ -81,6 +87,8 @@ Balance Overdue Principal,,
 Bank Account,ບັນຊີທະນາຄານ,
 Bank Statement,,
 Base Amount,,
+Basic Information,,
+Beginner,ເລີ່ມຕົ້ນ,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
 Branch,ສາຂາ,
@@ -90,10 +98,13 @@ Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
 Business Registration,,
+Busy,ຄາວຽກ,
+C,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
 Cancelled,ຫຼຸດລົງ,
+Capacity Management,,
 Capitalize,,
 Carry Forward,ປະຕິບັດໄປຂ້າງຫນ້າ,
 Centralized,,
@@ -147,6 +158,7 @@ Components,ອົງປະກອບ,
 Connections,,
 Contract Export Report,,
 Contract Fee,,
+Conversion Rate,ອັດຕາການປ່ຽນແປງ,
 Corporate Guarantee Only,,
 Cost Center,ສູນຕົ້ນທຶນ,
 Credit Account,ການບັນຊີ,
@@ -154,10 +166,11 @@ Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
 Criteria for loan application screening and approval,,
+Current Deal Count,,
 Current Disbursed Amount,,
+Current Lead Count,,
 Current Principal Amount,,
 Current Restructure Count,,
-Custom Limits,,
 Custom Product Code,,
 Custom Product Settings,,
 Custom Requirements,,
@@ -166,6 +179,7 @@ Custom product categorization and requirements,,
 Customer,ລູກຄ້າ,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
+D,,
 Daily,ປະຈໍາວັນ,
 Danger,ອັນຕະລາຍ,
 Date,ວັນທີ່ສະຫມັກ,
@@ -191,6 +205,7 @@ Demand Date,,
 Demand Generated,,
 Demand Subtype,,
 Demand Type,,
+Department,ພະແນກ,
 Deposit Amount,,
 Deposit Date,,
 Description,ລາຍລະອຽດ,
@@ -198,6 +213,7 @@ Description (EN),,
 Description (English),,
 Description (TH),,
 Description (Thai),,
+Designation,ການອອກແບບ,
 Detailed explanation of this selling point,,
 Details,ລາຍລະອຽດ,
 Disabled,ຄົນພິການ,
@@ -218,6 +234,7 @@ Document Type,ປະເພດເອກະສານ,
 Documentation,,
 Draft,Draft,
 Due Date,ວັນຄົບກໍານົດ,
+E,,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
@@ -235,6 +252,8 @@ Excess Amount,,
 Excess Amount Acceptance Limit,,
 Excess Amount Paid,,
 Excess amount repayment limit during loan closure,,
+Expert,ຜູ້ຊ່ຽວຊານ,
+Expertise Level,,
 FLDG,,
 FLDG Account,,
 FLDG Corporate Guarantee Percentage,,
@@ -280,6 +299,7 @@ Icon,ໄອຄອນ,
 "Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
+Inactive,Inactive,
 Income Account,ບັນຊີລາຍໄດ້,
 Income Multiplier,,
 Income Verification Required,,
@@ -302,6 +322,7 @@ Interest Type,,
 Interest Waiver,,
 Interest Waiver Account,,
 Interest Waiver Amount,,
+Intermediate,ລະດັບປານກາງ,
 Internal Foreclosure,,
 Invoice Date,ວັນທີ່ໃບເກັບເງິນ,
 Is Backdated,,
@@ -309,6 +330,7 @@ Is Excess Amount Refund,,
 Is Mandatory,ແມ່ນບັງຄັບ,
 Is NPA,,
 Is Percentage,,
+Is Primary,ແມ່ນປະຖົມ,
 Is Secured Loan,ແມ່ນເງິນກູ້ທີ່ປອດໄພ,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
@@ -379,6 +401,9 @@ Loan Interest Report,,
 Loan Limit Change Log,,
 Loan Manager,ຜູ້ຈັດການເງິນກູ້,
 Loan NPA Log,,
+Loan Officer Product,,
+Loan Officer Profile,,
+Loan Officer Territory,,
 Loan Outstanding Report,,
 Loan Partner,,
 Loan Partner Address,,
@@ -438,6 +463,7 @@ Loan is a Non Performing Asset,,
 Loans,ເງິນກູ້,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+"Lower number appears first. Use 1, 2, 3, etc. to control display order.",,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
@@ -446,7 +472,9 @@ Marketing point in English language,,
 Marketing point in Thai language,,
 Marketing selling points for this product,,
 Maturity Date,,
+Max Active Deals,,
 Max DPD Range,,
+Max Leads Per Day,,
 Maximum Debt Service Ratio (%),,
 Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
@@ -505,11 +533,13 @@ Notes,ອ່ືນ,
 Number Of Days,,
 Number of Guarantors Required,,
 "Number of copies or instances required (e.g., 3 for salary slips)",,
+Officer Name,,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
 Old Repayment Frequency,,
 Old Tenure,,
+On Leave,ໃບ,
 One Time,,
 Open,ເປີດ,
 Organization Type,,
@@ -575,6 +605,8 @@ Pending,ທີ່ຍັງຄ້າງ,
 Pending Charge Amount,,
 Pending Principal Amount,ຈຳ ນວນເງີນທີ່ຍັງຄ້າງ,
 Percentage,ອັດຕາສ່ວນ,
+Performance Metrics,,
+Performance Rating,,
 Pledge,ສັນຍາ,
 Pledge Requested,,
 Pledge Time,ເວລາສັນຍາ,
@@ -606,16 +638,17 @@ Process Loan Security Shortfall,ການກູ້ຢືມເງິນຂະບ
 Process Payroll Accounting Entry based on Employee,,
 Processing Fee,,
 Product Code,,
-Product Configuration,,
 Product Description,,
 Product Details,,
 Product Name,,
 Product Name (EN),,
 Product Name (TH),,
+Product Specializations,,
 Product fees and charges,,
 Product name in English language,,
 Product name in Thai language,,
 Product-specific special requirements and conditions,,
+Products,,
 Property,ຄຸນສົມບັດ,
 Property Deed,,
 Proposed Pledge,ສັນຍາສະ ເໜີ,
@@ -711,6 +744,7 @@ Sharing Parameter,,
 Shortfall Amount,ຈຳ ນວນຂາດແຄນ,
 Shortfall Percentage,,
 Shortfall Time,ເວລາຂາດເຂີນ,
+Sort Index,,
 Sort Order,ຮຽງ,
 Special Conditions,,
 Specify loan amount range where this document is required,,
@@ -730,6 +764,8 @@ Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,ລາຍລະອຽດໃນໄລຍະ,
+Territories,,
+Territory,ອານາເຂດຂອງ,
 The schedule type that will be used for generating the term loan schedules (will affect the payment date and monthly repayment amount),,
 Timestamp,ເວລາ,
 Title,Title,
@@ -740,11 +776,14 @@ Toggle Theme,,
 Total Amount Paid,ຈໍານວນເງິນທີ່ຈ່າຍ,
 Total Charges Paid,,
 Total Charges Payable,,
+Total Deals Closed,,
+Total Disbursement,,
 Total Installments Overdue ,,
 Total Installments Paid,,
 Total Installments Raised,,
 Total Interest Paid,,
 Total Interest Payable,ທີ່ຫນ້າສົນໃຈທັງຫມົດ Payable,
+Total Leads Assigned,,
 Total Overdue Amount,,
 Total Partner Interest Share,,
 Total Partner Principal Share,,
@@ -773,6 +812,7 @@ Unpledge Time,Unpledge Time,
 Unpledged,Unpledged,
 Unsecured,,
 Update Time,ເວລາປັບປຸງ,
+User,ຜູ້ໃຊ້,
 User Forum,,
 Utility Bill,,
 Utilized Limit,,
