--- a/lending/translations/my.csv
+++ b/lending/translations/my.csv
@@ -1,3 +1,4 @@
+A,,
 ALM Audit Report,,
 About,,
 Account,အကောင့်ဖွင့်,
@@ -7,6 +8,7 @@ Accounting Details,စာရင်းကိုင် Details ကို,
 Accounting Dimension,စာရင်းကိုင် Dimension,
 Accounting Dimensions,စာရင်းကိုင်အရွယ်အစား,
 Accounts,ငွေစာရင်း,
+Accounts User,အသုံးပြုသူအကောင့်,
 Accrual Date,,
 Accrual Details,,
 Accrual Type,,
@@ -65,13 +67,17 @@ Applies to Loan Amount (Max),,
 Applies to Loan Amount (Min),,
 Approved,Approved,
 Apps,,
+Assigned Territories,,
 Auto Write Off Amount ,,
 Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
+Available,ရရှိနိုင်,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
 Available Security Deposit,,
 Available Security Value,,
+Average Deal Value,,
+B,,
 BPI,,
 BPI Amount Difference,,
 BPI Difference Date,,
@@ -81,6 +87,8 @@ Balance Overdue Principal,,
 Bank Account,ဘဏ်မှအကောင့်,
 Bank Statement,,
 Base Amount,,
+Basic Information,,
+Beginner,အစပြုသူ,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
 Branch,အညွန့,
@@ -90,10 +98,13 @@ Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
 Business Registration,,
+Busy,အလုပ်ရှုပ်သည်,
+C,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
 Cancelled,ဖျက်သိမ်းခဲ့သည်,
+Capacity Management,,
 Capitalize,,
 Carry Forward,Forward သယ်,
 Centralized,,
@@ -147,6 +158,7 @@ Components,components,
 Connections,,
 Contract Export Report,,
 Contract Fee,,
+Conversion Rate,ပြောင်းလဲမှုနှုန်း,
 Corporate Guarantee Only,,
 Cost Center,ကုန်ကျစရိတ် Center က,
 Credit Account,ခရက်ဒစ်အကောင့်ကို,
@@ -154,10 +166,11 @@ Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
 Criteria for loan application screening and approval,,
+Current Deal Count,,
 Current Disbursed Amount,,
+Current Lead Count,,
 Current Principal Amount,,
 Current Restructure Count,,
-Custom Limits,,
 Custom Product Code,,
 Custom Product Settings,,
 Custom Requirements,,
@@ -166,6 +179,7 @@ Custom product categorization and requirements,,
 Customer,ဝယ်သူ,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
+D,,
 Daily,နေ့စဉ်,
 Danger,အန္တရာယ်,
 Date,နေ့စှဲ,
@@ -191,6 +205,7 @@ Demand Date,,
 Demand Generated,,
 Demand Subtype,,
 Demand Type,,
+Department,ဌါန,
 Deposit Amount,,
 Deposit Date,,
 Description,ဖေါ်ပြချက်,
@@ -198,6 +213,7 @@ Description (EN),,
 Description (English),,
 Description (TH),,
 Description (Thai),,
+Designation,သတ်မှတ်ပေးထားခြင်း,
 Detailed explanation of this selling point,,
 Details,အသေးစိတ်အချက်အလက်များကို,
 Disabled,ချို့ငဲသော,
@@ -218,6 +234,7 @@ Document Type,စာရွက်စာတမ်းကအမျိုးအစာ
 Documentation,,
 Draft,မူကြမ်း,
 Due Date,သတ်မှတ်ချိန်းရက်,
+E,,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
@@ -235,6 +252,8 @@ Excess Amount,,
 Excess Amount Acceptance Limit,,
 Excess Amount Paid,,
 Excess amount repayment limit during loan closure,,
+Expert,ကျွမ်းကျင်သူ,
+Expertise Level,,
 FLDG,,
 FLDG Account,,
 FLDG Corporate Guarantee Percentage,,
@@ -280,6 +299,7 @@ Icon,အိုင်ကွန်,
 "Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
+Inactive,မလှုပ်ရှားတတ်သော,
 Income Account,ဝင်ငွေခွန်အကောင့်,
 Income Multiplier,,
 Income Verification Required,,
@@ -302,6 +322,7 @@ Interest Type,,
 Interest Waiver,,
 Interest Waiver Account,,
 Interest Waiver Amount,,
+Intermediate,ကြားဖြစ်သော,
 Internal Foreclosure,,
 Invoice Date,ကုန်ပို့လွှာနေ့စွဲ,
 Is Backdated,,
@@ -309,6 +330,7 @@ Is Excess Amount Refund,,
 Is Mandatory,မသင်မနေရဖြစ်ပါတယ်,
 Is NPA,,
 Is Percentage,,
+Is Primary,မူလတန်း Is,
 Is Secured Loan,လုံခြုံသောချေးငွေ,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
@@ -379,6 +401,9 @@ Loan Interest Report,,
 Loan Limit Change Log,,
 Loan Manager,ချေးငွေမန်နေဂျာ,
 Loan NPA Log,,
+Loan Officer Product,,
+Loan Officer Profile,,
+Loan Officer Territory,,
 Loan Outstanding Report,,
 Loan Partner,,
 Loan Partner Address,,
@@ -438,6 +463,7 @@ Loan is a Non Performing Asset,,
 Loans,ချေးငွေများ,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+"Lower number appears first. Use 1, 2, 3, etc. to control display order.",,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
@@ -446,7 +472,9 @@ Marketing point in English language,,
 Marketing point in Thai language,,
 Marketing selling points for this product,,
 Maturity Date,,
+Max Active Deals,,
 Max DPD Range,,
+Max Leads Per Day,,
 Maximum Debt Service Ratio (%),,
 Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
@@ -505,11 +533,13 @@ Notes,မှတ်စုများ,
 Number Of Days,,
 Number of Guarantors Required,,
 "Number of copies or instances required (e.g., 3 for salary slips)",,
+Officer Name,,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
 Old Repayment Frequency,,
 Old Tenure,,
+On Leave,Leave တွင်,
 One Time,,
 Open,ဖွင့်လှစ်,
 Organization Type,,
@@ -575,6 +605,8 @@ Pending,လာမည့်,
 Pending Charge Amount,,
 Pending Principal Amount,ဆိုင်းငံ့ကျောင်းအုပ်ကြီးငွေပမာဏ,
 Percentage,ရာခိုင်နှုန်း,
+Performance Metrics,,
+Performance Rating,,
 Pledge,ပေါင်,
 Pledge Requested,,
 Pledge Time,အချိန်ပေးပါ,
@@ -606,16 +638,17 @@ Process Loan Security Shortfall,ချေးငွေလုံခြုံရေ
 Process Payroll Accounting Entry based on Employee,,
 Processing Fee,,
 Product Code,,
-Product Configuration,,
 Product Description,,
 Product Details,,
 Product Name,,
 Product Name (EN),,
 Product Name (TH),,
+Product Specializations,,
 Product fees and charges,,
 Product name in English language,,
 Product name in Thai language,,
 Product-specific special requirements and conditions,,
+Products,,
 Property,အိမ်ခြံမြေ,
 Property Deed,,
 Proposed Pledge,အဆိုပြုထားအပေါင်,
@@ -711,6 +744,7 @@ Sharing Parameter,,
 Shortfall Amount,လိုအပ်ချက်ပမာဏ,
 Shortfall Percentage,,
 Shortfall Time,အချိန်တို,
+Sort Index,,
 Sort Order,Sort အမိန့်,
 Special Conditions,,
 Specify loan amount range where this document is required,,
@@ -730,6 +764,8 @@ Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,သက်တမ်းအသေးစိတ်ကို,
+Territories,,
+Territory,နယျမွေ,
 The schedule type that will be used for generating the term loan schedules (will affect the payment date and monthly repayment amount),,
 Timestamp,Timestamp,
 Title,ဘှဲ့,
@@ -740,11 +776,14 @@ Toggle Theme,,
 Total Amount Paid,စုစုပေါင်းငွေပမာဏ Paid,
 Total Charges Paid,,
 Total Charges Payable,,
+Total Deals Closed,,
+Total Disbursement,,
 Total Installments Overdue ,,
 Total Installments Paid,,
 Total Installments Raised,,
 Total Interest Paid,,
 Total Interest Payable,စုစုပေါင်းအကျိုးစီးပွားပေးရန်,
+Total Leads Assigned,,
 Total Overdue Amount,,
 Total Partner Interest Share,,
 Total Partner Principal Share,,
@@ -773,6 +812,7 @@ Unpledge Time,Unpledge အချိန်,
 Unpledged,မင်္ဂလာပါ,
 Unsecured,,
 Update Time,အချိန်အသစ်ပြောင်းပါ,
+User,အသုံးပြုသူကို,
 User Forum,,
 Utility Bill,,
 Utilized Limit,,
