--- a/lending/translations/vi.csv
+++ b/lending/translations/vi.csv
@@ -1,3 +1,4 @@
+A,,
 ALM Audit Report,,
 About,,
 Account,Tài khoản,
@@ -7,6 +8,7 @@ Accounting Details,Chi tiết hạch toán,
 Accounting Dimension,Kích thước kế toán,
 Accounting Dimensions,Kích thước kế toán,
 Accounts,Tài khoản kế toán,
+Accounts User,Người dùng kế toán,
 Accrual Date,,
 Accrual Details,,
 Accrual Type,,
@@ -65,13 +67,17 @@ Applies to Loan Amount (Max),,
 Applies to Loan Amount (Min),,
 Approved,Đã được phê duyệt,
 Apps,,
+Assigned Territories,,
 Auto Write Off Amount ,,
 Automatically set based on parent product. Sub-products inherit approval limits from parent.,,
+Available,Khả dụng,
 Available Amount,,
 Available Limit,,
 Available Limit Amount,,
 Available Security Deposit,,
 Available Security Value,,
+Average Deal Value,,
+B,,
 BPI,,
 BPI Amount Difference,,
 BPI Difference Date,,
@@ -81,6 +87,8 @@ Balance Overdue Principal,,
 Bank Account,Tài khoản ngân hàng,
 Bank Statement,,
 Base Amount,,
+Basic Information,,
+Beginner,Người bắt đầu,
 Bi-Weekly,,
 Both Fixed Deposit and Corporate Guarantee,,
 Branch,Chi nhánh,
@@ -90,10 +98,13 @@ Broken Period Interest Days,,
 Broken Period Interest Recovery Account,,
 Bulk Repayment Log,,
 Business Registration,,
+Busy,Bận,
+C,,
 Cancel Future Accruals and Demands ,,
 Cancel future EMI Demands,,
 Cancellation Date,,
 Cancelled,HỦY BỎ,
+Capacity Management,,
 Capitalize,,
 Carry Forward,Carry Forward,
 Centralized,,
@@ -147,6 +158,7 @@ Components,Các thành phần,
 Connections,,
 Contract Export Report,,
 Contract Fee,,
+Conversion Rate,Tỷ lệ chuyển đổi,
 Corporate Guarantee Only,,
 Cost Center,Bộ phận chi phí,
 Credit Account,Tài khoản nợ,
@@ -154,10 +166,11 @@ Credit Adjustment,,
 Credit Adjustment Amount,,
 Credit Approval Report,,
 Criteria for loan application screening and approval,,
+Current Deal Count,,
 Current Disbursed Amount,,
+Current Lead Count,,
 Current Principal Amount,,
 Current Restructure Count,,
-Custom Limits,,
 Custom Product Code,,
 Custom Product Settings,,
 Custom Requirements,,
@@ -166,6 +179,7 @@ Custom product categorization and requirements,,
 Customer,Khách Hàng,
 Customer Refund Account,,
 Cyclic Day Of the Month,,
+D,,
 Daily,Hàng ngày,
 Danger,Nguy hiểm,
 Date,Ngày,
@@ -191,6 +205,7 @@ Demand Date,,
 Demand Generated,,
 Demand Subtype,,
 Demand Type,,
+Department,Cục,
 Deposit Amount,,
 Deposit Date,,
 Description,Mô tả,
@@ -198,6 +213,7 @@ Description (EN),,
 Description (English),,
 Description (TH),,
 Description (Thai),,
+Designation,Chỉ định,
 Detailed explanation of this selling point,,
 Details,Chi tiết,
 Disabled,Đã vô hiệu hóa,
@@ -218,6 +234,7 @@ Document Type,loại tài liệu,
 Documentation,,
 Draft,Bản nháp,
 Due Date,Ngày đáo hạn,
+E,,
 EMI,,
 EMI (PMT) based,,
 EMI (Principal + Interest),,
@@ -235,6 +252,8 @@ Excess Amount,,
 Excess Amount Acceptance Limit,,
 Excess Amount Paid,,
 Excess amount repayment limit during loan closure,,
+Expert,Chuyên gia,
+Expertise Level,,
 FLDG,,
 FLDG Account,,
 FLDG Corporate Guarantee Percentage,,
@@ -280,6 +299,7 @@ Icon,Biểu tượng,
 "Icon name (e.g., clock, dollar-sign, check-circle) for display",,
 Ignore On Cancel Amount Update,,
 In Process Limit,,
+Inactive,Không hoạt động,
 Income Account,Tài khoản thu nhập,
 Income Multiplier,,
 Income Verification Required,,
@@ -302,6 +322,7 @@ Interest Type,,
 Interest Waiver,,
 Interest Waiver Account,,
 Interest Waiver Amount,,
+Intermediate,Trung gian,
 Internal Foreclosure,,
 Invoice Date,Hóa đơn ngày,
 Is Backdated,,
@@ -309,6 +330,7 @@ Is Excess Amount Refund,,
 Is Mandatory,Bắt buộc,
 Is NPA,,
 Is Percentage,,
+Is Primary,Là chính,
 Is Secured Loan,Khoản vay có bảo đảm,
 Is Security Amount Refund,,
 Is Settlement Write Off,,
@@ -379,6 +401,9 @@ Loan Interest Report,,
 Loan Limit Change Log,,
 Loan Manager,Quản lý khoản vay,
 Loan NPA Log,,
+Loan Officer Product,,
+Loan Officer Profile,,
+Loan Officer Territory,,
 Loan Outstanding Report,,
 Loan Partner,,
 Loan Partner Address,,
@@ -438,6 +463,7 @@ Loan is a Non Performing Asset,,
 Loans,Cho vay,
 Loans will be marked as NPA when the days past due count exceed this threshold,,
 Log out,,
+"Lower number appears first. Use 1, 2, 3, etc. to control display order.",,
 Manual Foreclosure,,
 Manual NPA,,
 Manual Remarks,,
@@ -446,7 +472,9 @@ Marketing point in English language,,
 Marketing point in Thai language,,
 Marketing selling points for this product,,
 Maturity Date,,
+Max Active Deals,,
 Max DPD Range,,
+Max Leads Per Day,,
 Maximum Debt Service Ratio (%),,
 Maximum LTV Ratio (%),,
 Maximum Limit Amount,,
@@ -505,11 +533,13 @@ Notes,Ghi chú:,
 Number Of Days,,
 Number of Guarantors Required,,
 "Number of copies or instances required (e.g., 3 for salary slips)",,
+Officer Name,,
 Old EMI,,
 Old Loan Amount,,
 Old Rate of Interest,,
 Old Repayment Frequency,,
 Old Tenure,,
+On Leave,Nghỉ,
 One Time,,
 Open,Mở,
 Organization Type,,
@@ -575,6 +605,8 @@ Pending,Chờ,
 Pending Charge Amount,,
 Pending Principal Amount,Số tiền gốc đang chờ xử lý,
 Percentage,Tỷ lệ phần trăm,
+Performance Metrics,,
+Performance Rating,,
 Pledge,Lời hứa,
 Pledge Requested,,
 Pledge Time,Thời gian cầm cố,
@@ -606,16 +638,17 @@ Process Loan Security Shortfall,Thiếu hụt bảo đảm tiền vay,
 Process Payroll Accounting Entry based on Employee,,
 Processing Fee,,
 Product Code,,
-Product Configuration,,
 Product Description,,
 Product Details,,
 Product Name,,
 Product Name (EN),,
 Product Name (TH),,
+Product Specializations,,
 Product fees and charges,,
 Product name in English language,,
 Product name in Thai language,,
 Product-specific special requirements and conditions,,
+Products,,
 Property,Tài sản,
 Property Deed,,
 Proposed Pledge,Cam kết đề xuất,
@@ -711,6 +744,7 @@ Sharing Parameter,,
 Shortfall Amount,Số tiền thiếu,
 Shortfall Percentage,,
 Shortfall Time,Thời gian thiếu,
+Sort Index,,
 Sort Order,Thứ tự sắp xếp,
 Special Conditions,,
 Specify loan amount range where this document is required,,
@@ -730,6 +764,8 @@ Tax Return,,
 Tenure,,
 Tenure Post Restructure,,
 Term Details,Chi tiết điều khoản,
+Territories,,
+Territory,Địa bàn,
 The schedule type that will be used for generating the term loan schedules (will affect the payment date and monthly repayment amount),,
 Timestamp,Dấu thời gian,
 Title,Tiêu đề,
@@ -740,11 +776,14 @@ Toggle Theme,,
 Total Amount Paid,Tổng số tiền thanh toán,
 Total Charges Paid,,
 Total Charges Payable,,
+Total Deals Closed,,
+Total Disbursement,,
 Total Installments Overdue ,,
 Total Installments Paid,,
 Total Installments Raised,,
 Total Interest Paid,,
 Total Interest Payable,Tổng số lãi phải trả,
+Total Leads Assigned,,
 Total Overdue Amount,,
 Total Partner Interest Share,,
 Total Partner Principal Share,,
@@ -773,6 +812,7 @@ Unpledge Time,Thời gian mở,
 Unpledged,Không ghép,
 Unsecured,,
 Update Time,Cập nhật thời gian,
+User,Người dùng,
 User Forum,,
 Utility Bill,,
 Utilized Limit,,
