Added Market Price

--- a/lending/translations/my.csv
+++ b/lending/translations/my.csv
@@ -138,8 +138,10 @@ Closure Date,,
 Co Lender Schedule,,
 Co Lending,,
 Co-Lender Schedule,,
+Collateral Category,,
 Collateral Photo,,
 Collateral Requirements,,
+Collateral Settings,,
 Collateral Type,,
 Collateral and guarantor requirements by loan amount tier,,
 Collection Offset Sequence,,
@@ -621,6 +623,7 @@ Pre Restructure Details,,
 Prepayment Charges,,
 Primary,မူလတန်း,
 Primary Address,မူလတန်းလိပ်စာ,
+"Primary collateral type for this loan product. Vehicle = cars, motorcycles, trucks. Land = vacant land with title deed. Property = land with buildings/structures.",,
 Principal,,
 Principal Adjusted,,
 Principal Adjustment,,
